<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".iu.LoginActivity"
    android:padding="@dimen/login_llcontainer_padding"
    android:id="@+id/llcontainer"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvTitle"
        android:gravity="center"
        android:fontFamily="sans-serif-black"
        android:textSize="50dp"
        android:layout_margin="@dimen/login_title_margin_top"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUser"
        app:errorEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tieUser" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        app:errorEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiePassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tiePassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/chkRemember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:checked="true"
            android:text="@string/chkRemember" />

        <Button
            android:id="@+id/btSingUp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:onClick="ShowSignUp"
            android:text="@string/btSingUp" />

    </LinearLayout>

    <Button
        android:id="@+id/btSingIn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="ShowDashBoard"
        android:background="@drawable/rounded_corners"
        android:text="@string/btSingIn" />

    <!-- Con la propiedad android:gravity posiciono abajo TODOS los componentes
    y con android:layout_gravity se ha de indicar en cada uno de ellos -->
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorPrimaryDark"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvRegisterOption"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom |center"
            android:text="@string/tvRegisterOption" />

        <LinearLayout
            android:id="@+id/llbottombar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/login_llbottombar_margin_bottom"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_google"
                android:text="Button" />

            <ImageButton
                android:id="@+id/btFacebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_facebook"
                android:text="Button" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>